force-app/main/default/objects/aecm__Capability_Process_Update__e/aecm__Capability_Process_Update__e.object-meta.xml
<CustomObject>
    <description>Platform Event to be used to update the banner on Capability process record</description>
    <label>Capability Process Update</label>
</CustomObject>