force-app/main/default/objects/aecm__Capability_Process_Update__e/fields/aecm__Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>aecm__Allocation_Percentage__c</fullName>
    <label>Allocation Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>