force-app/main/default/objects/aecm__Capability_Process_Update__e/fields/aecm__Capability_Active__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capability Active</label>
    <type>Checkbox</type>
</CustomField>