force-app/main/default/objects/aecm__Capability_Process_Update__e/fields/aecm__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Event_Type__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>