force-app/main/default/objects/aecm__Capability_Process_Update__e/fields/aecm__Process_ID__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process_ID__c</fullName>
    <label>Process ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>